--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.14",
     "lucide-react": "^0.544.0",
+    "motion": "^12.24.5",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
