--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma": "^5.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "eslint-config-next": "15.5.9",
     "eslint-plugin-react-hooks": "^7.0.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   },
@@ -56,5 +58,8 @@
       "sharp",
       "unrs-resolver"
     ]
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
